manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-ossaibot
spec:
    ports:
    - port: 8080 
    selector:
        app: ossaibot
